# FitGhost

./: .gitignore  API_DEBUG_REPORT.md  API_TEST_SUCCESS.md  ARCHITECTURE.md  FINAL_PROJECT_STATUS_KR.md  GEMINI_2.5_FLASH_LITE_SETUP.md  GEMINI_API_SETUP.md  IMAGE_SEARCH_IMPLEMENTATION.md  IMAGE_SEARCH_UI_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MASTERPRD.md  MASTERPRD_UNIFIED.md  MODEL_MANAGEMENT_GUIDE.md  MODEL_SIZE_FIX.md  NOWGUIDE.md  PROJECT_STATUS_FINAL.md  PROXY_ENVIRONMENT_ANALYSIS.md  PROXY_SETUP.md  QA_CHECKLIST.md  README.md  SMOLVLM_DEPLOYMENT_REPORT.md  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/kotlin/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  development_principles.md  done_definition.md  project_architecture.md  project_purpose.md  suggested_commands.md  tech_stack_and_constraints.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/ghostfit/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/fitghost/app/: CreditStoreInstrumentedTest.kt  GalleryGridInstrumentedTest.kt
app/src/debug/res/values/: admob_app_id.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sample_cart.json  sample_shop.json  sample_wardrobe.json
app/src/main/cpp/: CMakeLists.txt  EmbeddedServerJni.cpp  ServerEntry.cpp
app/src/main/java/com/fitghost/app/: App.kt  MainActivity.kt
app/src/main/java/com/fitghost/app/ads/: ConsentManager.kt  RewardedAdController.kt
app/src/main/java/com/fitghost/app/ai/: AiConfig.kt  EmbeddedLlamaServer.kt  LlamaServerController.kt  MatchingItemsGenerator.kt  ModelManager.kt  WardrobeAutoComplete.kt
app/src/main/java/com/fitghost/app/ai/cloud/: GeminiTagger.kt
app/src/main/java/com/fitghost/app/constants/: CategoryConstants.kt
app/src/main/java/com/fitghost/app/data/: CreditStore.kt  LocalImageStore.kt  TryOnRepository.kt
app/src/main/java/com/fitghost/app/data/cache/: CacheManager.kt
app/src/main/java/com/fitghost/app/data/db/: AppDb.kt  Converters.kt  Daos.kt  Wardrobe.kt
app/src/main/java/com/fitghost/app/data/local/: AppDatabase.kt  CartDao.kt
app/src/main/java/com/fitghost/app/data/model/: GarmentTaxonomy.kt  Models.kt  NanoBananaModels.kt  ShopModels.kt
app/src/main/java/com/fitghost/app/data/nanobanana/: GeminiClient.kt
app/src/main/java/com/fitghost/app/data/network/: GeminiFashionService.kt  GoogleCseApi.kt  NaverApi.kt  OpenMeteoApi.kt  SearchApiClient.kt
app/src/main/java/com/fitghost/app/data/repository/: CartRepository.kt  CategoryRepository.kt  CreditRepository.kt  ProductSearchEngine.kt  ShopRepository.kt  WardrobeRepository.kt
app/src/main/java/com/fitghost/app/data/search/: SearchApis.kt
app/src/main/java/com/fitghost/app/data/settings/: RecentModelPhotos.kt  UserSettings.kt
app/src/main/java/com/fitghost/app/data/weather/: OpenMeteo.kt  WeatherRepo.kt
app/src/main/java/com/fitghost/app/domain/: OutfitRecommender.kt  RecommendationService.kt
app/src/main/java/com/fitghost/app/engine/: CloudTryOnEngine.kt  CompositeTryOnEngine.kt  FakeTryOnEngine.kt  GeminiTryOnEngine.kt  NanoBananaTryOnEngine.kt  PromptTemplates.kt  TryOnEngine.kt  TryOnPromptBuilder.kt
app/src/main/java/com/fitghost/app/ui/: Nav.kt
app/src/main/java/com/fitghost/app/ui/components/: BottomBar.kt  Buttons.kt  NeumorphicSegmentedControl.kt  SoftClay.kt  SoftClayButton.kt
app/src/main/java/com/fitghost/app/ui/navigation/: FitGhostBottomNavigation.kt  FitGhostDestinations.kt  FitGhostNavHost.kt
app/src/main/java/com/fitghost/app/ui/screens/: Cart.kt  Discover.kt  Gallery.kt  Home.kt  Shop.kt  TryOn.kt  ViewModels.kt  Wardrobe.kt
app/src/main/java/com/fitghost/app/ui/screens/cart/: CartComponents.kt  CartScreen.kt  CartViewModel.kt  CartViewModelFactory.kt
app/src/main/java/com/fitghost/app/ui/screens/fitting/: FittingScreen.kt  FittingViewModel.kt
app/src/main/java/com/fitghost/app/ui/screens/gallery/: GalleryScreen.kt
app/src/main/java/com/fitghost/app/ui/screens/home/: HomeComponents.kt  HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/fitghost/app/ui/screens/onboarding/: OnboardingScreen.kt
app/src/main/java/com/fitghost/app/ui/screens/shop/: ShopComponents.kt  ShopScreen.kt  ShopViewModel.kt  (+1 more)
app/src/main/java/com/fitghost/app/ui/theme/: Color.kt  Dimensions.kt  NeumorphicComponents.kt  NeumorphicTheme.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/com/fitghost/app/util/: AdManager.kt  ApiKeyProvider.kt  Browser.kt  LocationProvider.kt  ServiceLocator.kt  TimeProvider.kt  TryOnBridge.kt
app/src/main/java/com/fitghost/app/utils/: ApiKeyManager.kt  GeminiApiHelper.kt  ImageUtils.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/fitghost/app/: ExampleUnitTest.kt  OutfitRecommenderTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: download_and_upload_model.py  download_model.sh  download_model_optimized.py  upload_to_r2.py  upload_to_r2.sh  validate_shop.sh
tmp/: cors.json  public.json  ui.xml  ui_add.xml  ui_shop.xml
workers/proxy/: .gitignore  package-lock.json  package.json  wrangler.toml
workers/proxy/src/: index.js
(+4 files in other folders)
